feat: adding new logic lambda auth
