# docs/swagger.json
@@ -960,18 +960,16 @@
         },
         "/client/service-orders/{code}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "client-service-orders"
                 ],
                 "summary": "Get service order progress (client)",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CPF/CNPJ",
-                        "name": "document_number",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Service Order Code",
@@ -992,18 +990,16 @@
         },
         "/client/service-orders/{code}/budget/approve": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "client-service-orders"
                 ],
                 "summary": "Approve latest budget",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CPF/CNPJ",
-                        "name": "document_number",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Service Order Code",
@@ -1021,18 +1017,16 @@
         },
         "/client/service-orders/{code}/budget/reject": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "client-service-orders"
                 ],
                 "summary": "Reject latest budget",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CPF/CNPJ",
-                        "name": "document_number",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Service Order Code",
@@ -1059,18 +1053,16 @@
         },
         "/client/service-orders/{code}/status": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "tags": [
                     "client-service-orders"
                 ],
                 "summary": "Get service order status (client)",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CPF/CNPJ",
-                        "name": "document_number",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Service Order Code",
